--- a/VSExam/src/main/res/values/strings.xml
+++ b/VSExam/src/main/res/values/strings.xml
@@ -7,6 +7,9 @@
     <string name="sliding_pane_layout_summary">This activity illustrates the use of sliding panes. The content pane may be slid to one side on narrow devices to reveal the left pane used to select content. Sliding panes can be used to fit a UI intended for wider screens in a smaller space. Tapping the Action Bar\'s Up button at the left side of the bar will navigate up in the hierarchy, represented by the left pane. If you rotate the device to landscape mode, on most devices you will see that both panes fit together side by side with no sliding necessary.</string>
     <string name="send_mail">Poslat zprávu ...</string>
 
+    <string name="registered">Registrován</string>
+    <string name="unregistered">Neregistrován</string>
+
     <!-- study fields -->
     <!-- 1. faculty -->
     <string name="p_fu">Finance a účetnictví</string>
