Implement sorting of Exams and show headers to each group
Signed-off-by: Frca <killerfrca@gmail.com>

--- a/VSExam/src/main/res/values/strings.xml
+++ b/VSExam/src/main/res/values/strings.xml
@@ -10,6 +10,10 @@
     <string name="registered">Registrován</string>
     <string name="unregistered">Neregistrován</string>
 
+    <string name="group_title_is_registered">Jste přihlášen</string>
+    <string name="group_title_can_register">Můžete se registrovat</string>
+    <string name="group_title_can_not_register">Nemůžete se registrovat</string>
+
     <!-- study fields -->
     <!-- 1. faculty -->
     <string name="p_fu">Finance a účetnictví</string>
