Completely remove dependency on resources string resources and use downloaded structure
Signed-off-by: Frca <killerfrca@gmail.com>

--- a/VSExam/src/main/res/values/strings.xml
+++ b/VSExam/src/main/res/values/strings.xml
@@ -25,174 +25,11 @@
     <string name="action_registerASAP">Přihlásit co nejdříve</string>
     <string name="action_cancel_registerASAP">Zrušit přihlášení co nejdříve</string>
 
-    <!-- study fields -->
-    <!-- 1. faculty -->
-    <string name="p_fu">Finance a účetnictví</string>
-    <string name="p_finac">Finance and Accounting for Common Europe</string>
-
-    <string name="f_bp">Bankovnictví a pojišťovnictví</string>
-    <string name="f_fi">Finance</string>
-    <string name="f_uc">Účetnictví a finanční řízení podniku</string>
-    <string name="f_up">Učitelství praktického vyučování v ekonomickém vzdělávání</string>
-    <string name="f_dp">Zdanění a daňová politika</string>
-    <string name="f_fo">Finance a oceňování podniku</string>
-    <string name="f_fg">Finanční inženýrství</string>
-    <string name="f_tvep">Teorie vyučování ekonomických předmětů</string>
-
-    <string name="s_1au">Auditing</string>
-    <string name="s_1co">Controlling</string>
-    <string name="s_1db">Daně v podnikání</string>
-    <string name="s_1fg">Finanční inženýrství</string>
-    <string name="s_1oc">Oceňování podniku a jeho majetku</string>
-    <string name="s_1pe">Peněžní ekonomie a bankovnictví</string>
-    <string name="s_1uc">Účetnictví a finanční řízení podniku</string>
-    <string name="s_1up">Učitelství odborných ekonomických předmětů pro střední školy</string>
-    <string name="s_1vr">Veřejné rozpočty v číslech</string>
-
-    <!-- 2. faculty -->
-    <string name="p_me">Mezinárodní ekonomické vztahy</string>
-    <string name="p_pl">Politologie</string>
-    <string name="p_egei">Economics of Globalisation and European Integration</string>
-
-    <string name="f_rc">Cestovní ruch a regionální rozvoj</string>
-    <string name="f_ib">International Business</string>
-    <string name="f_mo">Mezinárodní obchod</string>
-    <string name="f_ms">Mezinárodní studia - diplomacie</string>
-    <string name="f_pp">Podnikání a právo</string>
-    <string name="f_pl">Politologie</string>
-    <string name="f_cr">Cestovní ruch</string>
-    <string name="f_ei">Evropská integrace</string>
-    <string name="f_ids">International and Diplomatic Studies</string>
-    <string name="f_mp">Mezinárodní politika a diplomacie</string>
-    <string name="f_es">Evropská studia</string>
-    <string name="f_moe">Mezinárodní obchod</string>
-    <string name="f_mh">Obchodní a mezinárodní hospodářské právo</string>
-
-    <string name="s_2bs">International Business Strategies</string>
-    <string name="s_2cr">Cestovní ruch</string>
-    <string name="s_2cs">Čínská studia</string>
-    <string name="s_2di">Diplomacie</string>
-    <string name="s_2ee">Evropská ekonomická integrace</string>
-    <string name="s_2ir">Analýza mezinárodních vztahů</string>
-    <string name="s_2kj">Komerční jazyky</string>
-    <string name="s_2kk">Komerční komunikace</string>
-    <string name="s_2mi">Manažerská informatika - Informační a prezentační technologie v praxi</string>
-    <string name="s_2op">Retail Business</string>
-    <string name="s_2pr">Právo v podnikání</string>
-    <string name="s_2rs">Rozvojová studia</string>
-    <string name="s_2zp">Ekonomie a politika životního prostředí</string>
-
-    <!-- 3. faculty -->
-    <string name="p_em">Ekonomika a management</string>
-    <string name="p_et">Ekonomické teorie</string>
-
-    <string name="f_am">Arts Management</string>
-    <string name="f_cfm">Corporate Finance and Management</string>
-    <string name="f_epm">Ekonomika predprijatija i menedžment</string>
-    <string name="f_pe">Podniková ekonomika a management</string>
-    <string name="f_ek">Ekonomie</string>
-    <string name="f_pem">Podniková ekonomika a management</string>
-    <string name="f_peme">Podniková ekonomika a management</string>
-
-    <string name="s_3af">Analytik finančního sektoru</string>
-    <string name="s_3am">Manažer kultury a umění</string>
-    <string name="s_3ap">Poradce - auditor</string>
-    <string name="s_3en">Ekonomika nestátních neziskových organizací</string>
-    <string name="s_3fi">Finanční manažer</string>
-    <string name="s_3hr">Personální management</string>
-    <string name="s_3ls">Management kvality a Lean Six Sigma</string>
-    <string name="s_3lt">Logistika - mezinárodní přeprava a zasílatelství </string>
-    <string name="s_3mi">Management inovací </string>
-    <string name="s_3mk">Marketing</string>
-    <string name="s_3ms">Malé a střední podniky</string>
-    <string name="s_3sp">Manažerská sociologie a psychologie</string>
-    <string name="s_3tv">Ekonomika sportu</string>
-
-    <!-- 4. faculty -->
-    <string name="p_ai">Aplikovaná informatika</string>
-    <string name="p_km">Kvantitativní metody v ekonomice</string>
-
-    <string name="f_ai">Aplikovaná informatika</string>
-    <string name="f_eo">Ekonometrie a operační výzkum</string>
-    <string name="f_eov">Ekonometrie a operační výzkum</string>
-    <string name="f_st">Statistika</string>
-    <string name="f_im">Informační management</string>
-    <string name="f_it">Informační systémy a technologie</string>
-    <string name="f_ki">Kognitivní informatika</string>
-    <string name="f_pi">Podniková  informatika</string>
-    <string name="f_zt">Znalostní technologie</string>
-    <string name="f_ed">Ekonomická demografie</string>
-    <string name="f_sp">Statisticko-pojistné inženýrství</string>
-    <string name="f_in">Informatika</string>
-    <string name="f_me">Multimédia v ekonomické praxi</string>
-    <string name="f_ps">Podnikové informační systémy</string>
-    <string name="f_mm">Matematické metody v ekonomii</string>
-    <string name="f_sd">Sociálně ekonomická demografie</string>
-    <string name="f_sm">Statistické metody v ekonomii</string>
-    <string name="f_se">Statistika a ekonometrie</string>
-
-    <string name="s_4ad">Analýzy sociálně ekonomických dat</string>
-    <string name="s_4rv">Řízení podnikové výkonnosti</string>
-
-    <!-- 5. faculty -->
-    <string name="p_es">Ekonomie a hospodářská správa</string>
-    <string name="p_hp">Hospodářská politika a správa</string>
-
-    <string name="f_eke">Economics</string>
-    <string name="f_nh">Národní hospodářství</string>
-    <string name="f_re">Veřejná správa a regionální rozvoj</string>
-    <string name="f_lae">Ekonomická a regionální studia Latinské Ameriky</string>
-    <string name="f_ea">Ekonomická analýza</string>
-    <string name="f_hp">Hospodářská politika</string>
-    <string name="f_hd">Hospodářské a politické dějiny 20. století</string>
-    <string name="f_rs">Regionální studia</string>
-    <string name="f_vs">Veřejná správa</string>
-    <string name="f_zp">Ekonomika a správa životního prostředí</string>
-    <string name="f_et">Ekonomická teorie</string>
-
-    <string name="s_5be">Ekonomie a psychologie</string>
-    <string name="s_5bs">Bolivijská studia</string>
-    <string name="s_5ep">Ekonomie a právo</string>
-    <string name="s_5ez">Ekonomická žurnalistika</string>
-    <string name="s_5fi">Filosofie</string>
-    <string name="s_5hd">Novodobé hospodářské dějiny</string>
-    <string name="s_5ma">Makroekonomická analýza</string>
-    <string name="s_5ms">Mexická studia</string>
-    <string name="s_5mv">Dějiny mezinárodních vztahů</string>
-    <string name="s_5no">Státní správa a neziskový sektor</string>
-    <string name="s_5re">Regionální rozvoj a evropská integrace</string>
-    <string name="s_5rr">Rozvoj obcí, měst a regionů</string>
-    <string name="s_5sp">Sociální politika</string>
-    <string name="s_5ss">Středoevropská studia</string>
-    <string name="s_5vs">Veřejná správa</string>
-    <string name="s_5zp">Ekonomika životního prostředí</string>
-
-    <!-- 6. faculty -->
-    <string name="f_m">Management</string>
-    <string name="f__6mm">Management</string>
-    <string name="f_manag">Management</string>
-
-    <string name="s_6mi">Management informací</string>
-    <string name="s_6mp">Management podnikatelské sféry</string>
-    <string name="s_6mv">Management veřejné sféry a regionálního rozvoje</string>
-    <string name="s_6mz">Management zdravotnických služeb</string>
-
-    <!-- person general -->
-    <string name="faculty_ffu">Fakulta financí a účetnictví</string>
-    <string name="faculty_fmv">Fakulta mezinárodních vztahů</string>
-    <string name="faculty_fph">Fakulta podnikohospodářská</string>
-    <string name="faculty_fis">Fakulta informatiky a statistiky</string>
-    <string name="faculty_nf">Národohospodářská fakulta</string>
-    <string name="faculty_fmjh">Fakulta managementu</string>
+    <string name="nth_semester_study_plan_string">%1$d. semestr, studíjní plán %2$s</string>
+    <string name="study_type_form_string">%1$s typ studia, %2$s</string>
 
     <string name="form_full_time">Prezenční studium</string>
     <string name="form_combined">Kombinované studium</string>
     <string name="form_distance">Distanční studium</string>
-
-    <string name="type_bachelor">Bakalářský typ studia</string>
-    <string name="type_master">Navazující magisterský typ studia</string>
-    <string name="type_doctoral">Doktorský typ studia</string>
-
-    <string name="semester_nth">%1$d. semestr</string>
 
 </resources>
