--- a/VSExam/src/main/res/values/strings.xml
+++ b/VSExam/src/main/res/values/strings.xml
@@ -4,133 +4,119 @@
     <string name="app_name">VSExam</string>
     <string name="action_settings">Settings</string>
 
-    <string name="registered">Registrován</string>
-    <string name="unregistered">Neregistrován</string>
+    <string name="registered">Registered</string>
+    <string name="unregistered">Not registered</string>
 
-    <string name="menu_refresh">Refresh</string>
+    <string name="menu_refresh_exams">Refresh exams</string>
     <string name="menu_json_format">Get JSON format</string>
 
-    <string name="into_file">Do souboru</string>
+    <string name="into_file">Save to file</string>
+    <string name="logo">Logo</string>
 
-    <string name="group_title_is_registered">Jste přihlášen</string>
-    <string name="group_title_to_be_registered">Budete přihlášen</string>
-    <string name="group_title_can_register">Můžete se registrovat</string>
-    <string name="group_title_can_not_register">Nemůžete se registrovat</string>
+    <string name="group_title_is_registered">Registered</string>
+    <string name="group_title_to_be_registered">Will be registered</string>
+    <string name="group_title_can_register">Can register</string>
+    <string name="group_title_can_not_register">Can not register</string>
 
-    <string name="register">Přihlásit</string>
-    <string name="unregister">Odhlásit</string>
-    <string name="register_asap">Přihlásit co nejdříve</string>
-    <string name="cancel_register_asap">Zrušit přihlášení co nejdříve</string>
+    <string name="register">Register</string>
+    <string name="unregister">Log off</string>
+    <string name="register_asap">Schedule registration</string>
+    <string name="cancel_register_asap">Cancel scheduled registration</string>
 
-    <string name="nth_semester_study_plan_string">%1$d. semestr, studíjní plán %2$s</string>
-    <string name="study_type_form_string">%1$s typ studia, %2$s</string>
+    <string name="nth_semester_study_plan_string">%1$d. semester, study plan %2$s</string>
+    <string name="study_type_form_string">%1$s study type, %2$s</string>
 
-    <string name="form_full_time">Prezenční studium</string>
-    <string name="form_combined">Kombinované studium</string>
-    <string name="form_distance">Distanční studium</string>
+    <string name="form_full_time">Full-time study</string>
+    <string name="form_combined">Combined study</string>
+    <string name="form_distance">Distance study</string>
 
     <string name="exam_output">Exam output</string>
-    <string name="successfully_saved_into_file">Exam output</string>
+    <string name="successfully_saved_into_file">Successfully save into file.</string>
 
     <string name="unknown_action">Unknown action</string>
     <string name="loading_with_ellipsis">Loading&#8230;</string>
 
-    <string name="progress_structure_number_format">%1$d položek z přibližně %2$d zkontrolováno</string>
+    <string name="progress_structure_number_format">%1$d items from approx %2$d checked</string>
 
-    <string name="data_downloaded">Data stažena</string>
-    <string name="structure_downloaded_saved">Nová struktura byla úspěšně stažena a uložena.</string>
+    <string name="data_downloaded">Data loaded</string>
+    <string name="structure_downloaded_saved">New structure was successfully downloaded and saved.</string>
     <string name="last_update_on_x">Last update on %1$s.</string>
-    <string name="no_vse_structure_found">No VŠE Structure found, please download new from settings.</string>
-    <string name="display_all">Zobrazit všechny</string>
-    <string name="no_exams_in_this_period">V tomto období nebyly zatím vypsány žádné zkoušky.</string>
-    <string name="no_exams_with_filter">Zadanému filtru neodpovídají žádné zkoušky.</string>
-    <string name="access_denied">Přístup odepřen!</string>
-    <string name="no_auth_data">Nebyly nastaveny přihlašovací údaje.</string>
-    <string name="register_success">Přihlášení bylo úspěšné</string>
-    <string name="register_failure">Přihlášení bylo neúspšné</string>
-    <string name="unregister_success">Odhlášení bylo úspěšné</string>
-    <string name="unregister_failure">Odhlášení bylo neúspěšné</string>
-    <string name="unregister_confirmation">Opravdu chcete odhlásit z tohoto termínu?</string>
-    <string name="cancel_rot_confirmation">Opravdu chcete zrušit přihlášení co nejdříve?</string>
-    <string name="apply_rot_confirmation">Pomocí této funkce Vás aplikace automaticky přihlásí na vybraný termín ihned, jakmile bude v systému ISIS spuštěno přihlašování.
-Upozornění: Toto zařízení musí být v době registrace zapnuté.</string>
+    <string name="no_vse_structure_found">No school study structure found, please download new from settings.</string>
+    <string name="display_all">Display all</string>
+    <string name="no_exams_in_this_period">No exams were found in this period.</string>
+    <string name="no_exams_with_filter">No exams match selected filter.</string>
+    <string name="access_denied">Access denied!</string>
+    <string name="no_email_clients_installed">No e-mail client is installed.</string>
+    <string name="no_auth_data">No credentials were set.</string>
+    <string name="register_success">Registration was successful</string>
+    <string name="register_failure">Registration was not successful</string>
+    <string name="unregister_success">Logging off was successful</string>
+    <string name="unregister_failure">Logging off was not successful</string>
+    <string name="unregister_confirmation">Do you really want to log off from this exam?</string>
+    <string name="cancel_rot_confirmation">Do you really want to cancel scheduled registration?</string>
+    <string name="apply_rot_confirmation">This feature allows you to schedule registration of an exam in ISIS right on its registration date.
+Please note, that your device must be turned on around the time of registration, and that this feature might not guarantee registration on selected exam (especially if school server is under heavy load).</string>
     <string name="processing_data">Processing data</string>
     <string name="downloading_exams">Downloading exams</string>
-    <string name="no_network_connection_title">No network connection</string>
-    <string name="no_network_connection_message">To be able to use this app properly, you need to connect your device to the internet. Please do so and try this again.</string>
+    <string name="no_network_connection_title">No network connection</string>!!!
+    <string name="no_network_connection_message">To be able to use this app properly, you need to connect your device to the internet.
+Please do so and try this again.</string>
     <string name="network_error_exams_title">Network error</string>
-    <string name="network_error_exams_message">Could not download exam list from system ISIS. This is probably due to poor network connection. Do you want to try again?</string>
-    <string name="login_condition_xname">Please, input your xname.</string>
-    <string name="login_condition_password">Please, input your password.</string>
-    <string name="no_email_clients_installed">Žádný e-mailový klient není nainstalován.</string>
-    <string name="student_profile_title">Profil studenta</string>
-    <string name="notification_register_start_title">Počátek registrace</string>
-    <string name="notification_register_start_message">Během několika vteřin začne registrace předmětu %1$s. Prosíme, aby jste v následujících chvílích nevytěžovali své zařízení, ať zvýšite pravděpodobnost úspěšné registrace.</string>
-    <string name="notification_register_progress_title">Probíhá registrace</string>
-    <string name="notification_register_progress_message">Probíhá registrace předmětu %1$s. Prosíme, udržujte Vaše v klidu, ať zvýšite pravděpodobnost úspěšné registrace.</string>
-    <string name="notification_register_success_title">Příhlášen na termín</string>
-    <string name="notification_register_success_message">Byl jste přihlášen na termín předmětu %1$s dne %2$s.</string>
-    <string name="notification_register_failure_title">Neúspěšné přihlášení</string>
-    <string name="notification_register_failure_message">Bohužel jste nebyl příhlášen na termín předmětu %1$s. Důvodem bylo značné vytížení školních serverů, které způsobilo špatné zpracování přihlašovacích požadavků. Za způsobené škody se omlouváme.</string>
-    <string name="registration_soon_message">Předmět bude registrován během několika vteřin</string>
-    <string name="registration_in_x">Předmět bude registrován za %1$s</string>
-    <string name="programme">Program</string>
-    <string name="field">Obor</string>
-    <string name="specialization">Specializace</string>
-    <string name="send_mail">Poslat zprávu</string>
-    <string name="visit_web">Navštívit web</string>
+    <string name="network_error_exams_message">Could not download exam list from system ISIS. This is probably due to poor network connection.
+Do you want to try again?</string>
+
+    <string name="input_xname">User name (x-name)</string>
+    <string name="input_password">Password</string>
+    <string name="login_condition_xname">Input your valid x-name.</string>
+    <string name="login_condition_password">Input your valid password.</string>
     <string name="login">Login</string>
-    <string name="exam_info">Informace o termínu</string>
-    <string name="author">Vypsal</string>
-    <string name="exam_type">Druh (forma)</string>
-    <string name="state">Stav</string>
-    <string name="capacity">Kapacita</string>
-    <string name="exam_date">Datum termínu</string>
-    <string name="register_start">Přihlašování od</string>
-    <string name="register_end">Přihlašování do</string>
-    <string name="unregister_end">Přihlašování do</string>
-    <string name="classmates">Spolužáci</string>
-    <string name="input_xname">Uživatelské jméno (xname)</string>
-    <string name="input_password">Heslo</string>
-    <string name="always">Vždy</string>
-    <string name="when_offline">Pouze při neaktivní aplikaci</string>
-    <string name="never">Nikdy</string>
 
-    <string name="settings_register_notification_title">Notifikace při přihlašování</string>
-    <string name="settings_register_notification_dialog">Zobrazo</string>
-    <string name="settings_log_off_title">Odhlásit</string>
-    <string name="settings_log_off_summary">Odhlásí Vaše zařízení ze systému ISIS.</string>
-    <string name="settings_base_title">Základní</string>
-    <string name="settings_vse_study_structure_title">Studijní struktura</string>
-    <string name="view">Zobrazit</string>
-    <string name="settings_view_summary">Pokročilé. Zobrazí studijní strukturu ve formátu JSON.</string>
-    <string name="settings_refresh_data_title">Znova stáhnout strukturu</string>
-    <string name="settings_refresh_data_summary">Touto akcí znova stáhnete data o struktuře studia ze stránek VŠE.</string>
+    <string name="notification_register_start_title">Registration start</string>
+    <string name="notification_register_start_message">Registration of the exam %1$s will start in a few seconds.
+Please note, that keeping your device still may improve your chances to be successful.</string>
+    <string name="notification_register_progress_title">Registration in progress</string>
+    <string name="notification_register_progress_message">Registration of the exam %1$s is in progress.
+Please note, that keeping your device still may improve your chances to be successful.</string>
+    <string name="notification_register_success_title">Registration was successful!</string>
+    <string name="notification_register_success_message">You were successfully registered to the exam %1$s on %2$s!</string>
+    <string name="notification_register_failure_title">Registration failure</string>
+    <string name="notification_register_failure_message">Unfortunately registration of the exam %1$s failed.
+Heavy load of school servers have caused wrong evaluation of registration requests.
+We apologize for any damage caused.</string>
 
-    <string name="logo">Logo</string>
+    <string name="registration_soon_message">Exam will be registered in a few seconds</string>
+    <string name="registration_in_x">Exam will be registered in %1$s</string>
 
-    <string-array name="day_as_string">
-        <item>den</item>
-        <item>dny</item>
-        <item>dní</item>
-    </string-array>
+    <string name="student_profile_title">Student profile</string>
+    <string name="programme">Programme</string>
+    <string name="field">Field of study</string>
+    <string name="specialization">Track of study</string>
+    <string name="send_mail">Send mail</string>
+    <string name="visit_web">Visit web</string>
+    <string name="exam_info">About exam</string>
+    <string name="author">Listed</string>
+    <string name="exam_type">Type (form)</string>
+    <string name="state">State</string>
+    <string name="capacity">Capacity</string>
+    <string name="exam_date">Date of exam</string>
+    <string name="register_start">Registration since</string>
+    <string name="register_end">Registration until</string>
+    <string name="unregister_end">Log off until</string>
+    <string name="classmates">Classmates</string>
 
-    <string-array name="hour_as_string">
-        <item>hodina</item>
-        <item>hodiny</item>
-        <item>hodin</item>
-    </string-array>
+    <string name="always">Always</string>
+    <string name="when_offline">When not active</string>
+    <string name="never">Never</string>
 
-    <string-array name="minute_as_string">
-        <item>minuta</item>
-        <item>minuty</item>
-        <item>minut</item>
-    </string-array>
-
-    <string-array name="second_as_string">
-        <item>vteřina</item>
-        <item>vteřiny</item>
-        <item>vteřin</item>
-    </string-array>
+    <string name="settings_register_notification_title">Register notifications</string>
+    <string name="settings_register_notification_dialog">When notify</string>
+    <string name="settings_log_off_title">Log off</string>
+    <string name="settings_log_off_summary">Logs of this device from ISIS.</string>
+    <string name="settings_base_title">Basic</string>
+    <string name="settings_vse_study_structure_title">School study structure</string>
+    <string name="view">View</string>
+    <string name="settings_view_summary">Advanced. Displays school study structure in JSON format.</string>
+    <string name="settings_refresh_data_title">Reload study structure</string>
+    <string name="settings_refresh_data_summary">Study structure will be downloaded again from VŠE pages.</string>
 
 </resources>
