--- a/VSExam/src/main/res/values-cs/strings.xml
+++ b/VSExam/src/main/res/values-cs/strings.xml
@@ -8,7 +8,7 @@
     <string name="unregistered">Nepřihlášen</string>
 
     <string name="menu_refresh_exams">Obnovit zkoušky</string>
-    <string name="menu_json_format">Zobrazit ve formatu JSON</string>
+    <string name="menu_json_format">Zobrazit ve formátu JSON</string>
 
     <string name="into_file">Do souboru</string>
     <string name="logo">Logo</string>
@@ -23,7 +23,7 @@
     <string name="register_asap">Naplánovat přihlášení</string>
     <string name="cancel_register_asap">Zrušit plánované přihlášení</string>
 
-    <string name="nth_semester_study_plan_string">%1$d. semestr, studíjní plán %2$s</string>
+    <string name="nth_semester_study_plan_string">%1$d. semestr, studijní plán %2$s</string>
     <string name="study_type_form_string">%1$s typ studia, %2$s</string>
 
     <string name="form_full_time">Prezenční studium</string>
@@ -46,21 +46,21 @@
     <string name="no_exams_in_this_period">V tomto období nebyly nalezeny žádné zkoušky.</string>
     <string name="no_exams_with_filter">Zadanému filtru neodpovídají žádné zkoušky.</string>
     <string name="access_denied">Přístup odepřen!</string>
-    <string name="no_email_clients_installed">No e-mail client is installed.</string>
+    <string name="no_email_clients_installed">Žádný e-mailový klient není nainstalován.</string>
     <string name="no_auth_data">Nebyly nastaveny přihlašovací údaje.</string>
     <string name="register_success">Přihlášení bylo úspěšné</string>
-    <string name="register_failure">Přihlášení bylo neúspšné</string>
+    <string name="register_failure">Přihlášení bylo neúspěšné</string>
     <string name="unregister_success">Odhlášení bylo úspěšné</string>
     <string name="unregister_failure">Odhlášení bylo neúspěšné</string>
     <string name="unregister_confirmation">Opravdu chcete odhlásit z tohoto termínu?</string>
     <string name="cancel_rot_confirmation">Opravdu chcete zrušit přihlášení co nejdříve?</string>
-    <string name="apply_rot_confirmation">Tato funkce Vám umožňuje naplánovat přihlášení na zkoušku v systému ISIS ihned na žačátku přihlašování.
+    <string name="apply_rot_confirmation">Tato funkce Vám umožňuje naplánovat přihlášení na zkoušku v systému ISIS ihned na začátku přihlašování.
 Vezměte prosím na vědomí, že Vaše zařízení musí být zapnuté v době registrace, a že tato funkce Vám nemusí zaručit přihlášení na vybraný termín (hlavně v případě vysoké zátěže školních serverů).</string>
     <string name="processing_data">Zpracování dat</string>
     <string name="downloading_exams">Stahování zkoušek</string>
     <string name="no_network_connection_title">Žádné připojení k síti</string>
-    <string name="no_network_connection_message">Aby jste mohli řádně využívat tuto aplikaci musí být Vaše zařízení připojeno k internetu.
-Prosíme připojte Vaše zařízení a zkuste to znova.</string>
+    <string name="no_network_connection_message">Abyste mohli řádně využívat tuto aplikaci, musí být Vaše zařízení připojeno k internetu.
+Prosíme, připojte Vaše zařízení a zkuste to znova.</string>
     <string name="network_error_exams_title">Síťová chyba</string>
     <string name="network_error_exams_message">Nemohly být staženy údaje o zkouškách ze systému ISIS, pravděpodobně z důvodu nekvalitního síťového připojení.
 Chcete to zkusit znovu?</string>
@@ -71,16 +71,16 @@ Chcete to zkusit znovu?</string>
     <string name="login_condition_password">Vložte Vaše heslo</string>
     <string name="login">Přihlásit</string>
 
-    <string name="notification_register_start_title">Začátek přuhlašování</string>
+    <string name="notification_register_start_title">Začátek přihlašování</string>
     <string name="notification_register_start_message">Přihlašování na zkoušku %1$s začne během několika vteřin.
-        Vezměte prosím na vědomí, že udržení Vašeho zařízení v klidu zvýší šance na úspěšené přihlášení.</string>
+Vezměte prosím na vědomí, že udržení Vašeho zařízení v klidu zvýší šance na úspěšné přihlášení.</string>
     <string name="notification_register_progress_title">Probíhá registrace</string>
     <string name="notification_register_progress_message">Přihlašování na zkoušku %1$s právě probíhá.
-        Vezměte prosím na vědomí, že udržení Vašeho zařízení v klidu zvýší šance na úspěšené přihlášení.</string>
+Vezměte prosím na vědomí, že udržení Vašeho zařízení v klidu zvýší šance na úspěšné přihlášení.</string>
     <string name="notification_register_success_title">Přihlášení bylo úspěšné!</string>
     <string name="notification_register_success_message">Byl jste úspěšně přihlášen na zkoušku %1$s dne %2$s.</string>
     <string name="notification_register_failure_title">Neúspěšné přihlášení</string>
-    <string name="notification_register_failure_message">Pčihlášení na zkoušku %1$s se bohužel nezdařilo.
+    <string name="notification_register_failure_message">Přihlášení na zkoušku %1$s se bohužel nezdařilo.
 Vysoké vytížení školních serverů způsobilo špatné zpracování přihlašovacích požadavků.
 Za způsobené škody se omlouváme.</string>
 
@@ -89,7 +89,7 @@ Za způsobené škody se omlouváme.</string>
 
     <string name="student_profile_title">Profil studenta</string>
     <string name="programme">Program</string>
-    <string name="field">Studíjní obor</string>
+    <string name="field">Studijní obor</string>
     <string name="specialization">Specializace</string>
     <string name="send_mail">Poslat zprávu</string>
     <string name="visit_web">Navštívit web</string>
